# CSF-Core

./: .gitignore  .releaserc.json  BRANCH_INSTALLATION.md  CHANGELOG.md  COMMIT_MESSAGE.md  Cargo.toml  DEPLOYMENT.md  DOCKER_INTEGRATION_PLAN.md  INSTALLATION.md  LICENSE  LOCAL_DEVELOPMENT.md  MANUAL_UPDATE_FIX.md  README.md  UNINSTALL.md  UPDATE_SYSTEM.md  csf-core.service  csf-core.sudoers  docker-compose.ci-test.yml  docker-compose.dev.yml  docker-compose.local-backend.yml  docker-compose.local.yml  docker-compose.registry.yml  docker-compose.standalone.yml  install-agent.sh  install-daemon.sh  package.json  release-please-config.json  rustfmt.toml  start.sh
.github/scripts/: update-versions.sh
.github/workflows/: README.md  beta-release.yml  build-artifacts.yml  docker-build-manual.yml  docker-build-push.yml  lint.yml  main-release.yml  release-please.yml  release.yml
agent/: Cargo.toml  Dockerfile.dev  TESTING.md  config.example.toml  config.toml  test-p2p.sh
agent/src/: client.rs  collector.rs  config.rs  main.rs
agent/src/connect/: certs.rs  connector.rs  mod.rs
backend/: Cargo.toml  Dockerfile
backend/entity/: Cargo.toml
backend/entity/src/entities/: agent_metrics.rs  agents.rs  mod.rs
backend/migration/src/: lib.rs  m20251228_000000_add_agents_and_metrics.rs
backend/src/: auth_service.rs  docker_service.rs  init.rs  main.rs  rbac_service.rs  self_monitor.rs
backend/src/routes/: agents.rs  mod.rs  resources.rs  system.rs  updates.rs  users.rs
cli/: Dockerfile.dev
control-plane/api-gateway/: Cargo.toml  Dockerfile.dev
control-plane/failover-controller/: Cargo.toml  Dockerfile.dev
control-plane/registry/: Cargo.toml  Dockerfile.dev
control-plane/scheduler/: Cargo.toml  Dockerfile.dev
control-plane/sdn-controller/: Cargo.toml  Dockerfile.dev
control-plane/volume-manager/: Cargo.toml  Dockerfile.dev
crates/agent/: Cargo.toml  Dockerfile.dev
crates/cli/: Cargo.toml  Dockerfile.dev
crates/control-plane/: Cargo.toml  Dockerfile.dev
crates/control-plane/src/: main.rs
docs/: README.md
docs/architecture/: ARCHITECTURE_AGENT_SYSTEM.md  DAEMON_ARCHITECTURE.md  DOCKER_CONTAINER_INTEGRATION.md
docs/deployment/: BRANCH_INSTALLATION.md  DEPLOYMENT.md  INSTALLATION.md
docs/development/: LOCAL_BACKEND_DEVELOPMENT.md  LOCAL_DEVELOPMENT.md
docs/features/: AUTO_UPDATER.md  BETA_UPDATES.md  UPDATE_SCREEN.md
docs/frontend/: DASHBOARD.md
docs/internal/: VERSION_MANAGEMENT.md
docs/troubleshooting/: TROUBLESHOOTING.md  UPDATE_FIX.md
entity/: Cargo.toml
frontend/: .dockerignore  .env.example  Dockerfile.dev  Dockerfile.prod  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/components/: DeployDockerContainerDialog.svelte  UpdateNotification.svelte  UpdateScreen.svelte
frontend/src/lib/components/auth/: login-form-client.svelte  otp-form-client.svelte
frontend/src/lib/components/dashboard/: ActivityFeedCard.svelte  ResourceDistributionCard.svelte  SystemHealthCard.svelte  TrafficMapCard.svelte  UptimeCard.svelte
frontend/src/lib/components/navbar/: app-sidebar.svelte  nav-favorites.svelte  nav-main.svelte  nav-user.svelte  team-switcher.svelte  update-notifier.svelte
frontend/src/lib/components/settings/: OrganizationSettings.svelte  UpdateSettings.svelte
frontend/src/lib/components/ui/: service-icon.svelte
frontend/src/lib/services/: agents.ts  api-client.ts  auth.ts  budget.ts  expenses.ts  invoice.ts  marketplace.ts  organization.ts  resource-groups.ts  resources.ts  settings.ts  subscriptions.ts  system.ts  updates.ts
frontend/src/lib/stores/: auth.ts  theme.ts  update.ts  updates.ts
frontend/src/lib/types/: agent.ts  index.ts  organization.ts  resource-group.ts  resource.ts
frontend/src/lib/utils/: logger.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/admin/: +layout.server.ts  +layout.svelte  +page.svelte
frontend/src/routes/admin/organization/: +page.server.ts  +page.svelte
frontend/src/routes/admin/users/: +page.server.ts  +page.svelte
frontend/src/routes/api/set-auth-cookie/: +server.ts
frontend/src/routes/change-password/: +page.server.ts  +page.svelte
frontend/src/routes/local-system/: +page.svelte
frontend/src/routes/marketplace/: +page.svelte
frontend/src/routes/otp/: +page.svelte
frontend/src/routes/physical-servers/: +page.svelte
frontend/src/routes/physical-servers/[id]/: +page.svelte
frontend/src/routes/reports/: +page.svelte
frontend/src/routes/resource-groups/: +page.svelte
frontend/src/routes/resource-groups/[id]/: +page.svelte
frontend/src/routes/resource-groups/create/: +page.svelte
frontend/src/routes/resources/: +page.svelte
frontend/src/routes/settings/: +page.server.ts  +page.svelte
frontend/src/routes/signin/: +page.server.ts  +page.svelte
nixos-node/: .gitignore  DEPLOYMENT.md  README.md  deploy.sh  flake.nix  logo.txt
nixos-node/modules/: iso-configuration.nix  server-configuration.nix
scripts/: install-binary.sh  install-dev.sh  install.sh  quickfix.sh  reinstall.sh  start-local-backend.sh  test-install.sh  uninstall.sh  update.sh
(+16 files in other folders)
