[package]
name = "csf-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# System information
sysinfo = "0.32"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for server communication
reqwest = { version = "0.12", features = ["json"] }

# Configuration
config = "0.14"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["formatting", "parsing"] }

# Hostname
hostname = "0.4"

# TLS/mTLS
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2.0"
rcgen = { version = "0.13", features = ["x509-parser"] }
webpki = "0.22"

# Async HTTP server
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# Networking
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"

[features]
default = []
vendored-openssl = ["reqwest/native-tls-vendored"]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols

