[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "api-gateway"
path = "src/main.rs"

[dependencies]
# Internal dependencies
entity = { path = "../../entity" }
migration = { path = "../../migration" }
shared = { path = "../../shared" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Database
sea-orm = { workspace = true }

# Web framework
axum = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Security
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
rsa = { workspace = true }
totp-rs = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# OpenAPI
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# Other
rand = { workspace = true }
base64 = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
cookie = { workspace = true }
qrcode = { workspace = true }
image = { workspace = true }
sysinfo = { workspace = true }
bollard = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.22"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "1.0"
async-trait = "0.1"
utoipa = { version = "4.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
cookie = { version = "0.18.1", features = ["percent-encode"] }
hyper = "1.5"
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
http = "1.1"
totp-rs = { version = "5.6", features = ["qr", "otpauth"] }
qrcode = "0.14"
image = "0.25"
sysinfo = "0.32"
anyhow = "1.0"
bollard = "0.17"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }

[features]
default = []
vendored-openssl = []
