[package]
name = "agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
# Internal dependencies
shared = { path = "../shared" }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
dotenvy = { workspace = true }
anyhow = { workspace = true }
